--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>me.sfiguz7</groupId>
   <artifactId>ExtraTools</artifactId>
-  <version>1.1</version>
+  <version>1.2</version>
   
   <properties>
   	<maven.compiler.source>1.8</maven.compiler.source>
@@ -72,7 +72,7 @@
   	<dependency>
   		<groupId>com.github.TheBusyBiscuit</groupId>
   		<artifactId>Slimefun4</artifactId>
-  		<version>master-SNAPSHOT</version>
+  		<version>613bcd86b8</version>
   		<scope>provided</scope>
   		<exclusions>
   			<exclusion>
