--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>me.sfiguz7</groupId>
   <artifactId>ExtraTools</artifactId>
-  <version>MODIFIED</version>
+  <version>1.2</version>
   
   <properties>
   	<maven.compiler.source>1.8</maven.compiler.source>
